--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
     #env_file: .env
     environment:
-      - NODE_ENV=test
+      - NODE_ENV=production
     ports:
       - "8080:8080"
     deploy:
